--- a/config.env
+++ b/config.env
@@ -2,22 +2,22 @@
 _____REMOVE_THIS_LINE_____=True
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "1994291562:AAHNC3TSQwHC2nvrrXhvCXDc4-239og3Gzs"
+GDRIVE_FOLDER_ID = "13bWm8YEXfa0YyeeU3rZXIbiVlEciyjd9"
+OWNER_ID =958245378
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 7897790
+TELEGRAM_HASH = "265e2cee7c34b572c12d30573aafa622"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""  # Split by space
-SUDO_USERS = ""  # Split by space
+SUDO_USERS = "958245378"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+INDEX_URL = "https://1.bdstore.workers.dev"
 STATUS_LIMIT = ""  # Recommend limit status to 4 tasks
 UPTOBOX_TOKEN = ""
 MEGA_API_KEY = ""
@@ -25,7 +25,7 @@ MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 BLOCK_MEGA_FOLDER = "" 
 BLOCK_MEGA_LINKS = ""
-STOP_DUPLICATE = ""
+STOP_DUPLICATE = "True"
 RECURSIVE_SEARCH = ""  # Search in Subfolders (only for teamdriveid or root, you can't with folderid)
 SHORTENER = ""
 SHORTENER_API = ""
